--- a/configure-integrationserver/tasks/do_set-external-terracotta.yml
+++ b/configure-integrationserver/tasks/do_set-external-terracotta.yml
@@ -56,28 +56,10 @@
       - import_role: 
           name: provision-with-installer-from-s3
         vars:
-          provision_action: setup_files
-          webmethods_s3repo_scripts_dir: "scripts/terracotta"
-          webmethods_s3repo_inzip_license_filepath: "TC Clustering/terracotta-license.key"
-          webmethods_s3repo_products_autoscript_filename: "TerracottaBigMemory43Install.script"
-          webmethods_s3repo_fixes_autoscript_filename: "TerracottaBigMemory43Update.script"
-          webmethods_localrepo_license_filepath: "terracotta-license.key"
-        when: stat_terracotta_license_exists.stat.exists == false
-
-      - import_role: 
-          name: provision-with-installer-from-s3
-        vars:
-          provision_action: get_from_s3
-        when: stat_terracotta_license_exists.stat.exists == false
-        
-      - name: Copy license file if it does not exist
-        copy:
-          src: "{{ webmethods_localrepo_target_dir }}/terracotta-license.key"
-          dest: "{{ webmethods_terracotta_license_path }}"
-          owner: "{{ webmethods_user }}"
-          group: "{{ webmethods_group }}"
-          mode: 0644
-          remote_src: yes
+          provision_action: get_licenses_from_s3
+          webmethods_localrepo_license_zip_filename: "licenses_for_terracotta.zip"
+          webmethods_localrepo_license_inzip_filepath_copy_src: "TC Clustering/terracotta-license.key"
+          webmethods_localrepo_license_inzip_filepath_copy_dest: "{{ webmethods_terracotta_license_path }}"
         when: stat_terracotta_license_exists.stat.exists == false
 
       - import_role: 
