--- a/configure-integrationserver/tasks/do_set-external-terracotta.yml
+++ b/configure-integrationserver/tasks/do_set-external-terracotta.yml
@@ -58,7 +58,7 @@
         vars:
           provision_action: get_licenses_from_s3
           webmethods_localrepo_license_zip_filename: "licenses_for_terracotta.zip"
-          webmethods_localrepo_license_inzip_filepath_copy_src: "TC Clustering/terracotta-license.key"
+          webmethods_localrepo_license_inzip_filepath_copy_src: "{{ webmethods_localrepo_terracotta_license_inzip_filepath }}"
           webmethods_localrepo_license_inzip_filepath_copy_dest: "{{ webmethods_terracotta_license_path }}"
         when: stat_terracotta_license_exists.stat.exists == false
 
